# Fenrir-Launcher

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/fenrir-cli/: Cargo.toml
crates/fenrir-cli/src/: main.rs
crates/fenrir-cli/src/commands/: add.rs  config_cmd.rs  configure.rs  confirm.rs  info.rs  launch.rs  list.rs  mod.rs  runtime.rs  scan.rs
crates/fenrir-core/: Cargo.toml
crates/fenrir-core/src/: error.rs  lib.rs
crates/fenrir-core/src/cleanup/: mod.rs
crates/fenrir-core/src/config/: settings.rs
crates/fenrir-core/src/launcher/: mod.rs  monitor.rs  runner.rs
crates/fenrir-core/src/prefix/: builder.rs  mod.rs  profile.rs  tuner.rs  winetricks.rs
crates/fenrir-core/src/runtime/: discovery.rs  downloader.rs  github.rs  mod.rs  types.rs  version.rs
crates/fenrir-core/src/scanner/: classifier.rs  detector.rs  mod.rs  signatures.rs
crates/fenrir-core/tests/: integration_test.rs
data/profiles/: dodi.toml  fitgirl.toml  gog.toml  onlinefix.toml  onlinefix_melonloader.toml  scene.toml  steam_generic.toml
data/signatures/: epic.toml  gog.toml  steam.toml
docs/dev/: adding-a-store.md  architecture.md  profiles-guide.md  signatures-guide.md
docs/user/: commands.md  configuration.md  faq.md  getting-started.md  installation.md  troubleshooting.md
fenrir-gui/: README.md  package-lock.json  package.json
fenrir-gui/src/: App.tsx
fenrir-gui/src-tauri/: Cargo.toml  tauri.conf.json
fenrir-gui/src-tauri/src/: lib.rs  main.rs
fenrir-gui/src-tauri/src/commands/: config.rs  games.rs  mod.rs  runtime.rs  scan.rs
fenrir-gui/src/components/: ConfirmDialog.tsx  ErrorBanner.tsx  GameCard.tsx  GameDetail.tsx  GameGrid.tsx  ProgressBar.tsx  StatusBadge.tsx  StoreBadge.tsx
fenrir-gui/src/lib/: commands.ts  events.ts  mock.ts  types.ts
fenrir-gui/src/stores/: games.ts  runtimes.ts  scan.ts  ui.ts
fenrir-gui/src/views/: Library.tsx  RuntimeManager.tsx  ScanView.tsx
scripts/: setup-hooks.sh
