[workspace]
members = [
    "crates/fenrir-core",
    "crates/fenrir-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Filesystem
walkdir = "2"
dirs = "5"
glob = "0.3"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
regex-lite = "0.1"

# HTTP + download
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json"], default-features = false }
futures-util = "0.3"

# Checksum
sha2 = "0.10"
hex = "0.4"

# Archive extraction
flate2 = "1"
tar = "0.4"

# CLI progress
indicatif = "0.17"
