[package]
name = "fenrir-cli"
version.workspace = true
edition.workspace = true

[dependencies]
fenrir-core = { path = "../fenrir-core" }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
indicatif = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
