[package]
name = "fenrir-gui"
version = "0.1.0"
description = "Fenrir Launcher — GUI frontend"
authors = ["Burlone"]
edition = "2021"

[lib]
name = "fenrir_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fenrir-core = { path = "../../crates/fenrir-core" }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
